@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.254 2004/10/19 03:13:52 ben Exp $
+# $NetBSD: Makefile,v 1.255 2004/10/22 18:30:42 jmmv Exp $
 #
 
 COMMENT=	Audio tools
@@ -14,6 +14,7 @@ SUBDIR+=	applerecords
 SUBDIR+=	arts
 SUBDIR+=	audacity
 SUBDIR+=	aumix
+SUBDIR+=	aumix-gtk
 SUBDIR+=	bladeenc
 SUBDIR+=	bmp
 SUBDIR+=	bmp-esound
