@@ -1,0 +1,5 @@
+Aumix lets you adjust all the values from your audio mixer from an easy to
+use interface.
+
+This package is built with ncurses and GTK+ 2.0 support, to be used from the
+console or from within a graphical environment.
