@@ -1,0 +1,15 @@
+# $NetBSD: Makefile,v 1.1 2004/10/22 18:30:43 jmmv Exp $
+
+.include "../../audio/aumix/Makefile.common"
+
+PKGNAME=	${DISTNAME:S/aumix/aumix-gtk/}
+
+COMMENT+=	(ncurses and GTK+ 2.0 interfaces)
+
+CONFLICTS=	aumix-[0-9]*
+
+CONFIGURE_ARGS:=	${CONFIGURE_ARGS:S/^--without-gtk$//}
+
+.include "../../devel/pkgconfig/buildlink3.mk"
+.include "../../x11/gtk2/buildlink3.mk"
+.include "../../mk/bsd.pkg.mk"
